--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "r-trigger",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "base abstract trigger component for react",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
   ],
   "readmeFilename": "README.md",
   "dependencies": {
-    "react": "~15.2.0",
+    "react": "^15.5.4",
     "classnames": "~2.2.3"
   },
   "keywords": [
